--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="styles.f63f6e8432cc0aa914fe.css">
+
 </head>
 
 <body>
@@ -105,7 +105,7 @@
     </style>
     <div id="nb-global-spinner" class="spinner">
         <div class="blob blob-0">
-            <img style="" src="./favicon.png" alt="Logo Onu Mujeres">
+            <img src="./favicon.png" alt="Logo Orienta-T">
         </div>
         <div class="blob blob-1"></div>
         <div class="blob blob-2"></div>
